--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: n8n
     env: docker
-    dockerfilePath: Dockerfile
+    dockerfilePath: ./Dockerfile
     plan: free
+    autoDeploy: true
     envVars:
       - key: N8N_BASIC_AUTH_ACTIVE
         value: "true"
@@ -15,3 +16,4 @@ services:
         value: "5678"
       - key: WEB_CONCURRENCY
         value: "1"
+
