--- a/render.yaml
+++ b/render.yaml
@@ -36,9 +36,9 @@ services:
 
       # --- Webhook & Editor URLs (replace with your Render URL) ---
       - key: WEBHOOK_URL
-        value: "https://YOUR_RENDER_APP.onrender.com"
+        value: "https://n8n-kbew.onrender.com"
       - key: N8N_EDITOR_BASE_URL
-        value: "https://YOUR_RENDER_APP.onrender.com"
+        value: "https://n8n-kbew.onrender.com"
 
       # --- Task runners ---
       - key: N8N_RUNNERS_ENABLED
