--- a/render.yaml
+++ b/render.yaml
@@ -14,15 +14,15 @@ services:
       - key: N8N_PROTOCOL
         value: "https"
       - key: WEBHOOK_URL
-        value: "https://<your-render-app>.onrender.com/"
+        value: "https://n8n-kbew.onrender.com"
       - key: N8N_BASIC_AUTH_ACTIVE
         value: "true"
       - key: N8N_BASIC_AUTH_USER
         value: "admin"
       - key: N8N_BASIC_AUTH_PASSWORD
-        value: "<your-password>"
+        value: "admin123"
       - key: N8N_ENCRYPTION_KEY
-        value: "<long-random-string>"
+        value: "u8Fj9k2VxP4nL6sR3bQwZ1mT7yHcD5aG"
       - key: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
         value: "false"
       - key: DB_TYPE
@@ -36,7 +36,7 @@ services:
       - key: DB_POSTGRESDB_USER
         value: "postgres"
       - key: DB_POSTGRESDB_PASSWORD
-        value: "<your-supabase-password>"
+        value: "Lordjukay434@"
       - key: DB_POSTGRESDB_SSL
         value: "true"
       - key: PGSSLMODE
@@ -50,6 +50,6 @@ services:
       - key: PGUSER
         value: "postgres"
       - key: PGPASSWORD
-        value: "<your-supabase-password>"
+        value: "Lordjukay434@"
       - key: NODE_OPTIONS
         value: "--dns-result-order=ipv4first"
