--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
   - type: web
     name: n8n-supabase
-    env: node
+    env: docker
     plan: free
     region: oregon
-    buildCommand: "npm install --legacy-peer-deps && npm run build"
-    startCommand: "export NODE_OPTIONS='--dns-result-order=ipv4first' && npx n8n start"
+    buildCommand: "npm install --legacy-peer-deps"
+    startCommand: "sh -c 'NODE_OPTIONS=--dns-result-order=ipv4first npx n8n start'"
     envVars:
       - key: N8N_HOST
         value: "0.0.0.0"
@@ -24,7 +24,7 @@ services:
       - key: N8N_ENCRYPTION_KEY
         value: "u8Fj9k2VxP4nL6sR3bQwZ1mT7yHcD5aG"
       - key: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
-        value: "false"
+        value: "true"
       - key: DB_TYPE
         value: "postgresdb"
       - key: DB_POSTGRESDB_HOST
